[package]
name = "gm-sm2"
version = "0.13.0"
edition = "2024"

description = "A Rust Implementation of China's Standards of Encryption Algorithms SM2"
authors = ["evanyang1120@163.com"]
homepage = "https://github.com/CrayfishGo/gm-rs.git"
license = "MIT"
keywords = ["sm2"]
categories = ["cryptography"]
readme = "README.md"
documentation = "https://docs.rs/gm-sm2/"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = { version = "1.5.0", default-features = false }
rand = { version = "0.8.4", optional = true }
getrandom = { version = "0.3.4", default-features = false, features = ["wasm_js"], optional = true }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
num-traits = { version = "0.2.19", default-features = false }
gm-sm3 = { version = "0.10.0", path = "../gm-sm3", optional = true }
num-bigint = { version = "0.4.4", default-features = false }
yasna = { version = "0.5.2", features = ["num-bigint"], git = "https://github.com/qnighy/yasna.rs.git"}


[dev-dependencies]
criterion = "0.4"
hex-literal = "0.3"

[dependencies.pkcs8]
version = "0.10.2"
features = ["alloc", "pem"]
default-features = false

[dependencies.sec1]
version = "0.7.3"
features = [
    "subtle",
    "zeroize",
]
optional = true


[features]
default = [
    "sec1",
    "gm-sm3",
    "getrandom",
]
std = [
    "gm-sm3/std",
    "hex/std",
    "byteorder/std",
    "rand",
    "num-bigint/std"
]
